Fixup visual alignment in FF

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -3,6 +3,7 @@
 
 html, body {
   height: 100%;
+  overflow: hidden;
   font-family: 'Roboto Mono', 'Consolas', monospace;
 }
 
